--- a/index.html
+++ b/index.html
@@ -121,33 +121,29 @@
 
         <div class="col-lg-3 col-md-6">
           <div class="count-box">
-            <i class="bi bi-emoji-smile"></i>
-            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Happy Clients</p>
+            <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Machine Projects</p>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
-            <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Projects</p>
+            <span data-purecounter-start="0" data-purecounter-end="113" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Creations</p>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
-            <i class="bi bi-headset"></i>
-            <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Hours Of Support</p>
+            <span data-purecounter-start="0" data-purecounter-end="1600000" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Views</p>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
-            <i class="bi bi-award"></i>
-            <span data-purecounter-start="0" data-purecounter-end="24" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Awards</p>
+            <span data-purecounter-start="0" data-purecounter-end="10000" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Followers</p>
           </div>
         </div>
 
@@ -361,6 +357,7 @@
             </ul>
           </div>
         </div>
+        <!--Experience-->
         <div class="col-lg-6">
           <h3 class="resume-title">Experience</h3>
           <div class="resume-item">
@@ -381,6 +378,34 @@
             <ul>
               <li>Created and revised revision material for the ZNotes to help more students to prepare Alevel Physics</li>
               <li>Had written chapters on A2 astrophysics, quantum physics, and atomic physics, and revised electromagnetism as well as thermodynamics</li>
+            </ul>
+            </p>
+          </div>
+        </div>
+        <!--Other-->
+        <div class="col-lg-6">
+          <h3 class="resume-title">Others</h3>
+          <div class="resume-item">
+            <h4>Skills</h4>
+            <p>
+            <ul>
+              <li>Programming, Filming, Music Production, Photography, Machine Learning, Web Design</li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Languages</h4>
+            <p>
+            <ul>
+              <li>English, Chinese</li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Certificates</h4>
+            <p>
+            <ul>
+              <li>Crash Course on Python, Using Python to interact with Operating System, Supervised Machine Learning: Regression and Classification</li>
             </ul>
             </p>
           </div>
