--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             <h4>Languages</h4>
             <p>
             <ul>
-              <li>English, Chinese</li>
+              <li>English, Chinese (Mandarin)</li>
             </ul>
             </p>
           </div>
