--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-coding">Coding</li>
             <li data-filter=".filter-music">Music</li>
+            <li data-filter=".filter-design">Design</li>
             <li data-filter=".filter-filmming">Filmming</li>
           </ul>
         </div>
@@ -438,7 +439,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-coding">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/cs128.webp" class="img-fluid" alt="poster">
+            <img src="assets/img/portfolio/cs128-preview1.webp" class="img-fluid" alt="poster">
             <div class="portfolio-info">
               <h4>CS 128 Machine Problem</h4>
               <p>Coding</p>
@@ -451,7 +452,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-coding filter-music">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/mus105.webp" class="img-fluid" alt="poster">
+            <img src="assets/img/portfolio/mus105-preview1.webp" class="img-fluid" alt="poster">
             <div class="portfolio-info">
               <h4>MUS 105 Machine Project</h4>
               <p>Coding, Music</p>
@@ -464,7 +465,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-coding">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/cs124.webp" class="img-fluid" alt="poster">
+            <img src="assets/img/portfolio/cs124-preview2.webp" class="img-fluid" alt="poster">
             <div class="portfolio-info">
               <h4>CS 124 Machine Project</h4>
               <p>Coding</p>
@@ -475,12 +476,12 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-coding">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-coding filter-design">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/website.webp" class="img-fluid" alt="poster">
+            <img src="assets/img/portfolio/website-preview1.webp" class="img-fluid" alt="poster">
             <div class="portfolio-info">
               <h4>Personal Website</h4>
-              <p>Coding</p>
+              <p>Coding, Design</p>
               <div class="portfolio-links">
                 <a href="portfolio-website.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">See More <i class="fa-solid fa-arrow-right"></i></a>
               </div>
@@ -488,12 +489,38 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-music">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-coding filter-design">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/despacito.webp" class="img-fluid" alt="poster">
+            <img src="assets/img/portfolio/welog-preview1.webp" class="img-fluid" alt="poster">
+            <div class="portfolio-info">
+              <h4>WeLogStudio Website</h4>
+              <p>Coding, Design</p>
+              <div class="portfolio-links">
+                <a href="portfolio-welog.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">See More <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-coding filter-design">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/haozheli.pictures-preview2.webp" class="img-fluid" alt="poster">
+            <div class="portfolio-info">
+              <h4>Haozheli.Pictures</h4>
+              <p>Coding, Design</p>
+              <div class="portfolio-links">
+                <a href="portfolio-pictures.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">See More <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-music filter-flimming">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/despacito-preview1.webp" class="img-fluid" alt="poster">
             <div class="portfolio-info">
               <h4>Despacito - Dual Cellos</h4>
-              <p>Coding</p>
+              <p>Music</p>
               <div class="portfolio-links">
                 <a href="portfolio-despacito.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">See More <i class="fa-solid fa-arrow-right"></i></a>
               </div>
@@ -503,7 +530,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-filmming">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/davinci.webp" class="img-fluid" alt="poster">
+            <img src="assets/img/portfolio/davinci-preview1.webp" class="img-fluid" alt="poster">
             <div class="portfolio-info">
               <h4>Davinci Resolve Tutorials</h4>
               <p>Filmming</p>
@@ -516,12 +543,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-filmming">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/qingdao.webp" class="img-fluid" alt="poster">
+            <img src="assets/img/portfolio/vlog-preview1.webp" class="img-fluid" alt="poster">
             <div class="portfolio-info">
-              <h4>Qingdao - Summer</h4>
+              <h4>Cinematic Traveling Videos</h4>
               <p>Filmming</p>
               <div class="portfolio-links">
-                <a href="portfolio-qingdao.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">See More <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="portfolio-vlog.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">See More <i class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
