--- a/portfolio-cs124.html
+++ b/portfolio-cs124.html
@@ -53,7 +53,13 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <img src="assets/img/portfolio/cs124.webp" width="720px" alt="poster">
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/cs124-preview1.webp" width="720px" alt="poster">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/cs124-preview2.webp" width="720px" alt="poster">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -66,12 +72,12 @@
             <ul>
               <li><strong>Category</strong>: Android Design</li>
               <li><strong>Project date</strong>: Fall 2022</li>
-              <li><strong>See More</strong>: <a href="#"><i class="fa-brands fa-youtube"> Youtube</i></a> or <a href="#"><i class="fa-brands fa-bilibili"></i> Bilibili</a></li>
+              <li><strong>See More</strong>: <br>https://www.bilibili.com/video/BV1ad4y1s7yu/<br>https://youtu.be/M_Th3Cp8p5c</li>
             </ul>
             <strong>Noted that no code would be shared according to U of I student code.</strong>
 
             <p>
-              This machine project is a vital component of Introduction to Computer Science I - CS 124. Using Java, I developed an innovative Android application, incorporating a plethora of captivating features.
+              In the CS124 machine project, I completed an Android application that allows users to mark geographical locations. Additionally, I added features such as location saving and multi-language accessibility support to the app.
             </p>
           </div>
 
