--- a/portfolio-cs128.html
+++ b/portfolio-cs128.html
@@ -48,12 +48,18 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">CS 124 Machine Project</h2>
+            <h2 class="portfolio-title">CS 128 Machine Problem</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <img src="assets/img/portfolio/cs128.webp" width="720px" alt="poster">
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/cs128-preview1.webp" width="720px" alt="poster">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/cs128-preview2.webp" width="720px" alt="poster">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -64,13 +70,14 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Android Design</li>
+              <li><strong>Category</strong>: C++ Programming</li>
               <li><strong>Project date</strong>: Spring 2023</li>
-              <li><strong>See More</strong>: <a href="https://cs128.org">CS 128 Website</a></li>
+              <li><strong>Project URL</strong>: cs128.org</li>
             </ul>
+            <strong>Noted that no code would be shared according to U of I student code.</strong>
 
             <p>
-              This machine project is a vital component of Introduction to Computer Science I - CS 124. Using Java, I developed an innovative Android application, incorporating a plethora of captivating features.
+              In CS 128 MPs, students will complete weekly programming tasks, from easy to difficult, to hone their programming skills and thinking as a computer scientist.
             </p>
           </div>
 
