--- a/portfolio-pictures.html
+++ b/portfolio-pictures.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MUS 105 - Haozhe Li</title>
+  <title>Haozheli.Pictures - Haozhe Li</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,17 +48,21 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">MUS 105 Machine Projects</h2>
+            <h2 class="portfolio-title">Haozheli.Pictures</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/mus105-preview1.webp" width="720px" alt="poster">
+                  <img src="assets/img/portfolio/haozheli.pictures-preview2.webp" width="720px" alt="poster">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/mus105-preview2.webp" width="720px" alt="poster">
+                  <img src="assets/img/portfolio/haozheli.pictures-preview3.webp" width="720px" alt="poster">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/haozheli.pictures-preview1.webp" width="720px" alt="poster">
                 </div>
 
               </div>
@@ -70,14 +74,14 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Python Programming</li>
-              <li><strong>Project date</strong>: Spring 2023</li>
-              <li><strong>Project URL</strong>: <br>http://taube.web.illinois.edu/mus105/</li>
+              <li><strong>Category</strong>: Website Design</li>
+              <li><strong>Project date</strong>: In Progress</li>
+              <li><strong>Project URL</strong>: haozheli.pictures</li>
+              <li><strong>Source Code</strong>: https://shorturl.at/qwFUX</li>
             </ul>
-            <strong>Noted that no code would be shared according to U of I student code.</strong>
 
             <p>
-              In this course students will re-examine music notation and music theory concepts with the goal of designing programs that represent and process musical information. Students will consider various strategies for encoding musical data and implement python classes and methods to capture and manipulate musical score information from a music-theoretical perspective.
+              This is my personal gallery, and I regularly update my latest photography on this page. My photography skills are rather clumsy, but the photos in it all hold a little bit of my memories.
             </p>
           </div>
 
