--- a/portfolio-vlog.html
+++ b/portfolio-vlog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MUS 105 - Haozhe Li</title>
+  <title>VLOG - Haozhe Li</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,17 +48,21 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">MUS 105 Machine Projects</h2>
+            <h2 class="portfolio-title">Cinematic Traveling Videos</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/mus105-preview1.webp" width="720px" alt="poster">
+                  <img src="assets/img/portfolio/vlog-preview1.webp" width="720px" alt="poster">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/mus105-preview2.webp" width="720px" alt="poster">
+                  <img src="assets/img/portfolio/vlog-preview2.webp" width="720px" alt="poster">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/vlog-preview3.webp" width="720px" alt="poster">
                 </div>
 
               </div>
@@ -70,14 +74,13 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Python Programming</li>
-              <li><strong>Project date</strong>: Spring 2023</li>
-              <li><strong>Project URL</strong>: <br>http://taube.web.illinois.edu/mus105/</li>
+              <li><strong>Category</strong>: Filmmaking</li>
+              <li><strong>Project date</strong>: In Progress</li>
+              <li><strong>Project URL</strong>: <br>https://www.welogstudio.com/vlog.html<br>https://www.welogstudio.com/cinematic.html</li>
             </ul>
-            <strong>Noted that no code would be shared according to U of I student code.</strong>
 
             <p>
-              In this course students will re-examine music notation and music theory concepts with the goal of designing programs that represent and process musical information. Students will consider various strategies for encoding musical data and implement python classes and methods to capture and manipulate musical score information from a music-theoretical perspective.
+              I am a person who is passionate about travel, so I started shooting travel videos and VLOGs to document my journeys since high school. Compared to shooting on set, travel videos come with more uncertainties, which is why they do not involve storyboard designs. Therefore, I do my best to capture footage using cameras, drones, and other equipment during the pre-production phase. In post-production, I am also skilled in using professional editing software such as DaVinci Resolve, Premiere Pro, After Effects, and Final Cut Pro for video editing, color grading, and special effects production.
             </p>
           </div>
 
