--- a/portfolio-website.html
+++ b/portfolio-website.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MUS 105 - Haozhe Li</title>
+  <title>Personal Website - Haozhe Li</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,17 +48,21 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">MUS 105 Machine Projects</h2>
+            <h2 class="portfolio-title">Personal Website</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/mus105-preview1.webp" width="720px" alt="poster">
+                  <img src="assets/img/portfolio/website-preview1.webp" width="720px" alt="poster">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/mus105-preview2.webp" width="720px" alt="poster">
+                  <img src="assets/img/portfolio/website-preview2.webp" width="720px" alt="poster">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/website-preview3.webp" width="720px" alt="poster">
                 </div>
 
               </div>
@@ -70,14 +74,13 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Python Programming</li>
-              <li><strong>Project date</strong>: Spring 2023</li>
-              <li><strong>Project URL</strong>: <br>http://taube.web.illinois.edu/mus105/</li>
+              <li><strong>Category</strong>: Website Design</li>
+              <li><strong>Project date</strong>: In Progress</li>
+              <li><strong>Project URL</strong>: <br>haozheli.com<br>haozheli.cn</li>
             </ul>
-            <strong>Noted that no code would be shared according to U of I student code.</strong>
 
             <p>
-              In this course students will re-examine music notation and music theory concepts with the goal of designing programs that represent and process musical information. Students will consider various strategies for encoding musical data and implement python classes and methods to capture and manipulate musical score information from a music-theoretical perspective.
+              In my spare time, I self-taught HTML, CSS, and JavaScript skills and used templates to create my personal website: haozheli.com (haozheli.cn for the Chinese version). Over the past year, I have gone through three major revisions of my website, including the addition of new features, UI redesign, and optimization of loading speed. The source code of my website is stored on GitHub, and it is deployed on Vercel.
             </p>
           </div>
 
