--- a/portfolio-despacito.html
+++ b/portfolio-despacito.html
@@ -88,7 +88,7 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    <a href="https://haozheli.cn">中文 <i class="fa-solid fa-language"></i></a><br>
+    <a id="SwitchLanguage" href="#">中文 <i class="fa-solid fa-language"></i></a><br>
     Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> and deployed on <a href="https://vercel.com/">Vercel</a>
   </div>
 
@@ -100,6 +100,17 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script>
+    var currentDomain = window.location.hostname;
+    var link = document.getElementById('SwitchLanguage');
+    link.addEventListener('click', function(event) {
+      event.preventDefault();
+      var newDomain = currentDomain.replace('.com', '.cn');
+      var newPath = window.location.pathname;
+      var newLink = 'http://' + newDomain + newPath;
+      window.open(newLink, '_blank');
+    });
+  </script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
