--- a/portfolio-pictures.html
+++ b/portfolio-pictures.html
@@ -97,7 +97,7 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    <a id="SwitchLanguage" href="#">中文 <i class="fa-solid fa-language"></i></a><br>
+    <a href="https://haozheli.cn">中文 <i class="fa-solid fa-language"></i></a><br>
     Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> and deployed on <a href="https://vercel.com/">Vercel</a>
   </div>
 
