--- a/portfolio-davinci.html
+++ b/portfolio-davinci.html
@@ -100,7 +100,7 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    <a href="https://haozheli.cn">中文 <i class="fa-solid fa-language"></i></a><br>
+    <a id="SwitchLanguage" href="#">中文 <i class="fa-solid fa-language"></i></a><br>
     Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> and deployed on <a href="https://vercel.com/">Vercel</a>
   </div>
 
@@ -120,7 +120,7 @@
       var newDomain = currentDomain.replace('.com', '.cn');
       var newPath = window.location.pathname;
       var newLink = 'http://' + newDomain + newPath;
-      window.open(newLink, '_blank');
+      window.location.href = newLink;
     });
   </script>
 
