--- a/portfolio-cs128.html
+++ b/portfolio-cs128.html
@@ -113,7 +113,7 @@
       var newDomain = currentDomain.replace('.com', '.cn');
       var newPath = window.location.pathname;
       var newLink = 'http://' + newDomain + newPath;
-      window.location.href = newLink;
+      link.href = newLink;
     });
   </script>
 
