--- a/portfolio-davinci.html
+++ b/portfolio-davinci.html
@@ -120,7 +120,7 @@
       var newDomain = currentDomain.replace('.com', '.cn');
       var newPath = window.location.pathname;
       var newLink = 'http://' + newDomain + newPath;
-      window.location.href = newLink;
+      link.href = newLink;
     });
   </script>
 
