--- a/portfolio-website.html
+++ b/portfolio-website.html
@@ -109,16 +109,12 @@
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script>
-    var currentDomain = window.location.hostname;
-    var link = document.getElementById('SwitchLanguage');
-    link.addEventListener('click', function(event) {
-      event.preventDefault();
-      var newDomain = currentDomain.replace('.com', '.cn');
-      var newPath = window.location.pathname;
-      var newLink = 'http://' + newDomain + newPath;
-      link.href = newLink;
-    });
-  </script>
+    var link = document.getElementById('SwitchLanguage');
+    link.addEventListener('click', function(event) {
+      event.preventDefault();
+      window.open('https://haozheli.cn')
+    });
+  </script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
