--- a/portfolio-welog.html
+++ b/portfolio-welog.html
@@ -109,14 +109,10 @@
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script>
-    var currentDomain = window.location.hostname;
     var link = document.getElementById('SwitchLanguage');
     link.addEventListener('click', function(event) {
       event.preventDefault();
-      var newDomain = currentDomain.replace('.com', '.cn');
-      var newPath = window.location.pathname;
-      var newLink = 'http://' + newDomain + newPath;
-      link.href = newLink;
+      window.open('https://haozheli.cn')
     });
   </script>
 
