--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span><script>document.write(new Date().getFullYear() - 2004);</script></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Science (IP)</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span><a href="mailto:hi@haozheli.com">hi@haozheli.com</a></span></li>
               </ul>
             </div>
           </div>
@@ -597,14 +596,14 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>hi@haozheli.com</p>
+            <a href="mailto:hi@haozheli.com">hi@haozheli.com</a>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>+1 217 693 8436</p>
+            <a href="sms:+1217 693 8436">+1 217 693 8436</a>
           </div>
         </div>
       </div>
