--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>16 April 2004</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>haozheli.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 217 693 8436</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span><a href="sms:+1217 693 8436">+1 217 693 8436</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Urbana, IL</span></li>
               </ul>
             </div>
@@ -104,7 +104,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span><script>document.write(new Date().getFullYear() - 2004);</script></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Science (IP)</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span><a href="mailto:hi@haozheli.com">hi@haozheli.com</a></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:hi@haozheli.com?subject=[DO NOT REMOVE from haozheli.com]">hi@haozheli.com</a></span></li>
               </ul>
             </div>
           </div>
@@ -596,7 +596,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <a href="mailto:hi@haozheli.com">hi@haozheli.com</a>
+            <a href="mailto:hi@haozheli.com?subject=[DO NOT REMOVE from haozheli.com]">hi@haozheli.com</a>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
