--- a/portfolio-cs128.html
+++ b/portfolio-cs128.html
@@ -72,7 +72,7 @@
             <ul>
               <li><strong>Category</strong>: C++ Programming</li>
               <li><strong>Project date</strong>: Spring 2023</li>
-              <li><strong>Project URL</strong>: cs128.org</li>
+              <li><strong>Project URL</strong>: <a href="https://cs128.org" target="_blank">CS 128 Course Website</a></li>
             </ul>
             <strong>Noted that no code would be shared according to U of I student code.</strong>
 
