--- a/portfolio-davinci.html
+++ b/portfolio-davinci.html
@@ -80,7 +80,7 @@
             <ul>
               <li><strong>Category</strong>: Filmmaking</li>
               <li><strong>Project date</strong>: In Progress</li>
-              <li><strong>Project URL</strong>: https://www.welogstudio.com/tutorial.html</li>
+              <li><strong>Project URL</strong>: <a href="https://www.welogstudio.com/tutorial.html" target="_blank">Tutorial - WeLog</a></li>
             </ul>
 
             <p>
