--- a/portfolio-despacito.html
+++ b/portfolio-despacito.html
@@ -68,7 +68,7 @@
             <ul>
               <li><strong>Category</strong>: Music</li>
               <li><strong>Project date</strong>: 2020 Winter</li>
-              <li><strong>Project URL</strong>: <br>https://shorturl.at/mrzY7<br>https://youtu.be/IbZteYbCg8A</li>
+              <li><strong>Project URL</strong>: <br><a href="https://youtu.be/M_Th3Cp8p5c" target="_blank"><i class="fa-brands fa-youtube"></i>YT</a><br><a href="https://www.bilibili.com/video/BV1ad4y1s7yu/" target="_blank"><i class="fa-brands fa-bilibili"></i>bilibili</a></li>
             </ul>
 
             <p>
