--- a/portfolio-pictures.html
+++ b/portfolio-pictures.html
@@ -76,8 +76,8 @@
             <ul>
               <li><strong>Category</strong>: Website Design</li>
               <li><strong>Project date</strong>: In Progress</li>
-              <li><strong>Project URL</strong>: haozheli.pictures</li>
-              <li><strong>Source Code</strong>: https://shorturl.at/qwFUX</li>
+              <li><strong>Project URL</strong>: <a href="https://haozheli.pictures" target="_blank">Haozheli.Pictures</a></li>
+              <li><strong>Source Code</strong>: <a href="https://github.com/Haozhe-Li/gallery" target="_blank"><i class="fa-brands fa-github"></i>GitHub</a></li>
             </ul>
 
             <p>
