--- a/portfolio-website.html
+++ b/portfolio-website.html
@@ -76,7 +76,7 @@
             <ul>
               <li><strong>Category</strong>: Website Design</li>
               <li><strong>Project date</strong>: In Progress</li>
-              <li><strong>Project URL</strong>: <br>haozheli.com<br>haozheli.cn</li>
+              <li><strong>Project URL</strong>: <a href="https://haozheli.com" target="_blank">haozheli.com</a></li>
             </ul>
 
             <p>
