--- a/portfolio-welog.html
+++ b/portfolio-welog.html
@@ -76,7 +76,7 @@
             <ul>
               <li><strong>Category</strong>: Website Design</li>
               <li><strong>Project date</strong>: In Progress</li>
-              <li><strong>Project URL</strong>: <br>welogstudio.com<br>welogstudio.cn</li>
+              <li><strong>Project URL</strong>: <a href="https://welogstudio.com" target="_blank">welogstudio.com</a></li>
             </ul>
 
             <p>
