--- a/portfolio-cs124.html
+++ b/portfolio-cs124.html
@@ -72,7 +72,8 @@
             <ul>
               <li><strong>Category</strong>: Android Design</li>
               <li><strong>Project date</strong>: Fall 2022</li>
-              <li><strong>See More</strong>: <br>https://www.bilibili.com/video/BV1ad4y1s7yu/<br>https://youtu.be/M_Th3Cp8p5c</li>
+              <li><strong>Project URL</strong>: <a href="https://cs124.org" target="_blank">CS 124 Course Website</a></li>
+              <li><strong>See More</strong>: <br><a href="https://youtu.be/M_Th3Cp8p5c" target="_blank"><i class="fa-brands fa-youtube"></i>YT</a><br><a href="https://www.bilibili.com/video/BV1ad4y1s7yu/" target="_blank"><i class="fa-brands fa-bilibili"></i>bilibili</a></li>
             </ul>
             <strong>Noted that no code would be shared according to U of I student code.</strong>
 
