update hyper linke

--- a/portfolio-vlog.html
+++ b/portfolio-vlog.html
@@ -76,7 +76,7 @@
             <ul>
               <li><strong>Category</strong>: Filmmaking</li>
               <li><strong>Project date</strong>: In Progress</li>
-              <li><strong>Project URL</strong>: <br><a href="https://www.welogstudio.com/vlog.html" target="_blank">VLOG - WeLog</a><br><a href="https://www.welogstudio.com/cinematic.html" target="_blank">Cinematic Shots - WeLog</a></li>
+              <li><strong>Project URL</strong>: <a href="https://www.welogstudio.com/vlog.html" target="_blank">VLOG - WeLog</a>   <a href="https://www.welogstudio.com/cinematic.html" target="_blank">Cinematic Shots - WeLog</a></li>
             </ul>
 
             <p>
