--- a/downloads/varification.html
+++ b/downloads/varification.html
@@ -505,7 +505,7 @@
             </div>
 
             <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2">
-                <div style="background-image: url('assets/img/bg.webp');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
+                <div style="background-image: url('bg.webp');" class="absolute pin bg-cover bg-no-repeat md:bg-left lg:bg-center">
 </div>
             </div>
         </div>
