--- a/portfolio-mus105.html
+++ b/portfolio-mus105.html
@@ -72,7 +72,7 @@
             <ul>
               <li><strong>Category</strong>: Python Programming</li>
               <li><strong>Project date</strong>: Spring 2023</li>
-              <li><strong>Project URL</strong>: <br><a href="http://taube.web.illinois.edu/mus105/" target="_blank">MUS 105 Course Website</a></li>
+              <li><strong>Project URL</strong>: <a href="http://taube.web.illinois.edu/mus105/" target="_blank">MUS 105 Course Website</a></li>
             </ul>
             <strong>Noted that no code would be shared according to U of I student code.</strong>
 
