--- a/404.html
+++ b/404.html
@@ -497,5 +497,15 @@
         </script>
         <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
         <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+        <!-- ConveyThis code -->
+        <script src="//cdn.conveythis.com/javascript/conveythis-initializer.js"></script>
+        <script type="text/javascript">
+            document.addEventListener("DOMContentLoaded", function(e) {
+            ConveyThis_Initializer.init({
+                api_key: "pub_107bb77d7d60f53f57d577ece1096ad3"
+            });
+            });
+        </script>
+        <!-- End ConveyThis code -->
     </body>
 </html>
