--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>16 April 2004</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>haozheli.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://www.haozheli.com">haozheli.com</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span><a href="sms:+1217 693 8436">+1 217 693 8436</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Urbana, IL</span></li>
               </ul>
@@ -262,7 +262,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3>Singing</h3>
+            <h3>RADWIMPS</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -277,7 +277,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <h3>PingPong</h3>
+            <h3>Mrs. Green Apple</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
