--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Student, Musician, Developer, Filmaker</h3>
           <p class="fst-italic">
-            I am a computer science and music student at the University of Illinois with a strong academic record. I have extensive programming experience in C++, Java, and Python, and a solid foundation in video and music production. In addition to my studies, I have founded a successful video blog channel with over 10,000 subscribers, where I share video tutorials, films, and vlogs. I also have experience with HTML and CSS and have built my own personal website from scratch. I am a creative and driven individual with a passion for technology and the arts, and I am excited to bring my skills and enthusiasm to any project or team.
+            Hi, I am Haozhe Li. I am a computer science and music student at the University of Illinois with a strong academic record. I have extensive programming experience in C++, Java, and Python, and a solid foundation in video and music production. In addition to my studies, I have founded a successful video blog channel with over 10,000 subscribers, where I share video tutorials, films, and vlogs. I also have experience with HTML and CSS and have built my own personal website from scratch. I am a creative and driven individual with a passion for technology and the arts, and I am excited to bring my skills and enthusiasm to any project or team.
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
+                <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Haozhe Li</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>16 April 2004</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://www.haozheli.com">haozheli.com</a></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span><a href="sms:+1217 693 8436">+1 217 693 8436</a></span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Urbana, IL</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
@@ -105,6 +105,7 @@
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span><script>document.write(new Date().getFullYear() - 2004);</script></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Science (IP)</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:hi@haozheli.com?subject=[DO NOT REMOVE from haozheli.com]">hi@haozheli.com</a></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Urbana, IL</span></li>
               </ul>
             </div>
           </div>
