--- a/index.html
+++ b/index.html
@@ -515,6 +515,19 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/blog-preview2.webp" class="img-fluid" alt="poster">
+            <div class="portfolio-info">
+              <h4>Blog</h4>
+              <p>Design</p>
+              <div class="portfolio-links">
+                <a href="portfolio-blog.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details">See More <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        
         <div class="col-lg-4 col-md-6 portfolio-item filter-music filter-flimming">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/despacito-preview1.webp" class="img-fluid" alt="poster">
