update blog section

--- a/portfolio-blog.html
+++ b/portfolio-blog.html
@@ -76,7 +76,7 @@
             <ul>
               <li><strong>Category</strong>: Website Design</li>
               <li><strong>Project date</strong>: In Progress</li>
-              <li><strong>Project URL</strong>: <a href="https://haozheli.pictures" target="_blank">Blog</a></li>
+              <li><strong>Project URL</strong>: <a href="https://haozheli.notion.site/Haozhe-Li-s-Blog-6e0aa792c6324d23abf1a2abf4859481?pvs=4" target="_blank">NOTION</a></li>
             </ul>
 
             <p>
