--- a/index.html
+++ b/index.html
@@ -638,11 +638,11 @@
           <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
         </div>
         <div class="my-3">
-          <div class="g-recaptcha" data-sitekey="6LezOOomAAAAAOnw066QBbxmzLyMrfLiXknyjJGd"></div>
           <div class="loading">Loading</div>
           <div class="error-message"></div>
           <div class="sent-message">Your message has been sent. Thank you!</div>
         </div>
+        <div class="h-captcha" data-sitekey="9e460eb7-9e03-4976-8d0e-39c05fc5feca"></div>
         <div class="text-center"><button 
           type="submit"
           onclick="event.preventDefault(); grecaptcha.execute();"
@@ -680,13 +680,9 @@
   </script>
   <!-- End ConveyThis code -->
 
-  <!--reCaptcha-->
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  <script>
-    function onSubmit(token) {
-      document.getElementById("contact-form").submit();
-    }
-  </script>
+  <!--hCaptcha code-->
+  <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
+  <!--End hCaptcha code-->
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
