--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
         event.target.form.submit();
       } else {
         // 如果未通过验证，则什么都不记录，也不提交表单
-        alert("Please complete the I AM A HUMAN test before submitting the form.");
+        alert("Please complete hCaptcha first. 请先完成hCaptcha验证");
       }
     }
   </script>
