--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
           <div class="loading">Loading</div>
           <div class="error-message"></div>
         </div>
-        <div class="h-captcha text-center" data-sitekey="9e460eb7-9e03-4976-8d0e-39c05fc5feca" data-theme="dark" data-size="compact"></div>
+        <div class="h-captcha text-center" data-sitekey="9e460eb7-9e03-4976-8d0e-39c05fc5feca" data-theme="dark"></div>
         <div class="text-center"><button type="submit" onclick="validateForm(event)">Send Message</button></div>
       </form>
 
