--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
           <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
         </div>
         <div class="form-group mt-3">
-          <textarea id="message class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+          <textarea id="message" class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
         </div>
         <input type="hidden" name="hcaptcha_result" id="hcaptchaResult" value="">
         <div class="my-3">
