--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
       <!-- Pop Up element -->
       <div id="popup">
-        <span id="closeBtn" onclick="closePopup()">&times;</span>
+        <span id="closeBtn" onclick="closePopup()"><i class="fa-solid fa-circle-xmark fa-beat"></i></span>
         <img src="" alt="Pop up QR code">
       </div>    
 
@@ -639,11 +639,12 @@
             <h3>Social Media</h3>
             <div class="social-links">
               <a href="https://github.com/Haozhe-Li" class="github"><i class="fa-brands fa-github"></i></a>
-        <a href="https://www.instagram.com/haozheli04/" class="instagram"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/haozhe-li-306742252/" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog" class="youtube"><i class="fa-brands fa-youtube"></i></a>
-        <a href="#" class="weixin"><i class="fa-brands fa-weixin"></i></a>
-        <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0" class="bilibili"><i class="fa-brands fa-bilibili"></i></a>
+              <a href="https://www.instagram.com/haozheli04/" class="instagram"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/haozhe-li-306742252/" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="https://www.youtube.com/channel/UCBI1IZM1HK6PP9COneQXpog" class="youtube"><i class="fa-brands fa-youtube"></i></a>
+              <a href="#" class="weixin" onclick="showPopup('assets/img/weixin-qr.webp'); return false;"><i class="fa-brands fa-weixin"></i></a>
+              <a href="https://space.bilibili.com/421778349?spm_id_from=333.1007.0.0" class="bilibili"><i class="fa-brands fa-bilibili"></i></a>
+              <a href="https://v.douyin.com/iDQXrmM/" class="tiktok"><i class="fa-brands fa-tiktok"></i></a>
             </div>
           </div>
         </div>
@@ -685,7 +686,7 @@
           <div class="error-message"></div>
         </div>
         <div class="h-captcha text-center" data-sitekey="9e460eb7-9e03-4976-8d0e-39c05fc5feca" data-theme="dark"></div>
-        <div class="text-center"><button type="submit" onclick="validateForm(event)">Send Message</button></div>
+        <div class="text-center"><button type="submit" onclick="validateForm(event)">Send Message<i class="fa-solid fa-message fa-fade"></i></button></div>
       </form>
 
     </div>
